tests/ui/type/issue-91268.rs
// error-pattern: this file contains an unclosed delimiter
// ignore-tidy-trailing-newlines
// `ţ` must be the last character in this file, it cannot be followed by a newline
fn main() {
    0: u8(ţ